--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Trying to learn to Code...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>over in Minnesota...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Love reading, anime and games with my wife...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Not sure...</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Apple Valley MN...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It is a good career path and it is fun to do...</p>
     </section>
 
     <footer id="footer">
